@@ -1,2 +1,2 @@
-@comment $NetBSD: PLIST,v 1.1 2001/11/01 01:27:03 zuntum Exp $
-bin/tkdiff3
+@comment $NetBSD: PLIST,v 1.2 2004/03/10 00:17:31 minskim Exp $
+bin/tkdiff4
