@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2004/02/16 16:34:02 recht Exp $
+$NetBSD: distinfo,v 1.5 2004/03/10 00:17:31 minskim Exp $
 
-SHA1 (tkdiff_3_09.zip) = 5c30883b81c7ad4b413d7b218b76271635efd76a
-Size (tkdiff_3_09.zip) = 63247 bytes
+SHA1 (tkdiff-4.0b2/tkdiff.zip) = eb29d8a0b3dc6630d8323c3f55159a0678567dbf
+Size (tkdiff-4.0b2/tkdiff.zip) = 76369 bytes
