@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5179 2004/03/09 22:49:48 minskim Exp $
+$NetBSD: CHANGES,v 1.5180 2004/03/10 00:17:31 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1352,3 +1352,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated at-spi to 1.3.15 [jmmv 2004-03-09]
 	Updated gnome-mag to 0.10.8 [jmmv 2004-03-09]
 	Updated tkcvs to 7.2 [minskim 2004-03-09]
+	Updated tkdiff to 4.0b2 [minskim 2004-03-10]
